--- a/app/src/main/res/layout/list_item_playlist.xml
+++ b/app/src/main/res/layout/list_item_playlist.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@drawable/background">
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        >
 
     <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="19dp"
             android:layout_marginTop="10dp"
             android:orientation="vertical"
@@ -20,7 +20,8 @@
                 android:background="#3F51B5"
                 android:scaleType="fitXY"
                 app:riv_corner_radius="20dp"
-                app:riv_mutate_background="true"/>
+                app:riv_mutate_background="true"
+                android:src="@drawable/maxresdefault"/>
 
         <TextView
                 android:id="@+id/txt_nameSong"
