--- a/app/src/main/res/layout/list_item_recommended.xml
+++ b/app/src/main/res/layout/list_item_recommended.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@drawable/background">
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        >
 
     <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="19dp"
             android:layout_marginTop="10dp"
-            android:orientation="vertical"
             >
 
         <com.makeramen.roundedimageview.RoundedImageView
@@ -20,7 +19,7 @@
                 android:background="#3F51B5"
                 android:scaleType="fitXY"
                 app:riv_corner_radius="20dp"
-                app:riv_mutate_background="true"/>
+                app:riv_mutate_background="true" />
 
         <TextView
                 android:id="@+id/txt_nameSong"
@@ -32,7 +31,8 @@
                 android:textColor="#FFFFFF"
                 android:textColorHint="#FFFFFF"
                 android:textSize="14sp"
-                android:gravity="center"/>
+                android:gravity="center"
+                android:maxLines="2"/>
 
         <TextView
                 android:id="@+id/txt_nameSinger"
