--- a/app/src/main/res/layout/fragment_songs.xml
+++ b/app/src/main/res/layout/fragment_songs.xml
@@ -17,6 +17,7 @@
             android:background="#00000000">
 
             <ImageView
+                android:id="@+id/mIVBack"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:src="@drawable/ic_back"/>
